# Mythic_Agent_Coder_CLI

./: .gitignore  LEGAL-NOTICE.md  NOTICE  README.md  RULES.AI.md  THIRD_PARTY_NOTICES.md  fix_image.py  format_script.py  mythic_crash_20260606_043327.txt  mythic_crash_20260606_051650.txt  mythic_crash_20260606_054647.txt  patch_setup.py  patch_tui.py  pyproject.toml  rewrite_setup.py  run_test.py  test_crash.py  test_create_bug.py  test_db.py  test_escape.py  test_footer.py  test_image.py  test_image_patch.py  test_image_react.py  test_image_wrapper.py  test_input.py  test_jpg.py  test_modal.py  test_mythic.py  test_png.py  test_semantic.py  test_setup.py  test_setup_widget.py  test_text.py  test_tui.py  test_ui.py  test_wrapper.py
.mythic/: memory.sqlite-shm  memory.sqlite-wal
arcanum/: README.md  arcanum.py
default_agent_characters/: Alfhild_Nyxra_Gridhex.md  Architect-Runhild_Svartdottir.md  Auditor-Solrun_Hvitmynd.md  Cartographer-Vedis_Eikleidh.md  Forge_Worker-Eldra_Jarnsdottir.md  Runa_Gridweaver_Freyasdottir.md  Scribe-Eirwyn_Runblom.md  Skald-Sigrun_Ljosbra.md  Thor_Guardian.md
mythic/ai/: provider_calls.jsonl
mythic_agent/: __init__.py  cli.py  constants.py  llm.py  mcp_server.py  subagent_modal.py  tools.py  tui.py  tutorials.py
mythic_agent/agents/: command_handler.py  llm.py  tools.py
mythic_agent/core/: audio.py  config_manager.py  engine.py  secure_api.py  tts.py
mythic_agent/data/: data_loader.py
mythic_agent/memory/: core_memory.py  vector_db.py
mythic_agent/ui/: main_app.py
mythic_agent/ui/components/: modals.py  subagent_editor.py  (+1 more)
(+3 files in other folders)
