[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mythic-agent"
version = "0.1.0"
description = "A clean, affordable CLI AI coding agent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "textual>=0.82.7",
    "pyyaml>=6.0.2",
    "litellm>=1.52.2",
    "textual-image>=0.13.2",
    "pillow>=10.4.0",
    "mcp>=1.0.0",
    "psycopg[binary]>=3.0.0",
    "requests>=2.0.0",
    "sounddevice>=0.5.1",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "piper-tts>=1.2.0"
]

[project.scripts]
mythic = "mythic_agent.cli:main"
mythic-mcp = "mythic_agent.mcp_server:main"
